# corn_disease_classification

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config  config.local
.dvc/tmp/: lock
configs/export/: default.yaml
configs/infer/: default.yaml
configs/train/: default.yaml
corn_classifier/: commands.py  export.py  infer.py  train.py  utils.py
corn_classifier/data/: dataset.py  download.py
corn_classifier/models/: archs.py  lit_model.py
data/: raw.dvc
outputs/2025-12-06/17-57-16/.hydra/: config.yaml  hydra.yaml
scripts/: trt_convert.sh
