[project]
name = "corn_classifier"
version = "0.1.0"
description = "Corn desease classification"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "dvc[gdrive]>=3.0.1",
    "kaggle>=1.7.4.5",
    "mlflow>=3.7.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.6.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
train = "corn_classifier.train:main"
infer = "corn_classifier.infer:main"
export = "corn_classifier.export:main"

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "dvc>=3.64.2",
    "flake8>=7.3.0",
    "hydra-core>=1.3.2",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.setuptools]
packages = ["corn_classifier"]
